[package]
name = "kademlia-exporter"
version = "0.6.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
cidr = "0.2.1"
csv = "1.1.6"
env_logger = "0.10.0"
futures = "0.3.25"
libp2p = { version = "0.50", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "metrics", "quic", "rsa", "macros"] }
log = "0.4.17"
prometheus-client = "0.18.1"
regex = "1"
void = "1.0.2"
tide = "0.16.0"
exit-future = "0.2.0"
ctrlc = "3.2.2"
structopt = "0.3.26"
futures-timer = "3.0.2"
maxminddb = "0.23.0"
serde = "1.0.149"
serde_derive = "1.0.125"
toml = "0.5.9"

# [patch."https://github.com/mxinden/rust-libp2p"]
# libp2p = { path = "/home/mxinden/code/github.com/libp2p/rust-libp2p" }
# libp2p-kad = { path = "/home/mxinden/code/github.com/libp2p/rust-libp2p/protocols/kad" }

# [patch.crates-io]
# libp2p = { path = "/home/mxinden/code/github.com/libp2p/rust-libp2p" }
# open-metrics-client = { path = "../rust-open-metrics-client" }

# Include debugging symbols in release binary.
[profile.release]
debug = true
