[package]
name = "kademlia-exporter"
version = "0.7.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
cidr = "0.2.1"
csv = "1.1.6"
env_logger = "0.10.0"
futures = "0.3.25"
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", version = "0.51", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "metrics", "quic", "rsa", "macros"] }
log = "0.4.17"
prometheus-client = "0.19.0"
parking_lot = "0.12"
regex = "1"
void = "1.0.2"
tide = "0.16.0"
exit-future = "0.2.0"
ctrlc = "3.2.4"
structopt = "0.3.26"
futures-timer = "3.0.2"
maxminddb = "0.23.0"
serde = "1.0.152"
serde_derive = "1.0.125"
toml = "0.6.0"

# Include debugging symbols in release binary.
[profile.release]
debug = true
